--- a/app/views/result_list.html
+++ b/app/views/result_list.html
@@ -7,11 +7,11 @@
 		<span ng-switch on="$index % 2">
 			<span ng-switch-when="0">
 				<div class="row">
-					<div class="col-md-6" ng-show="dbpResults[$index+0]">
-						<md-thumb-img mdthumbobj="dbpResults[$index+0]"></md-thumb-img>
+					<div class="col-md-6">
+						<md-thumb-img mdthumbobj="dbpResults[$index+0]" ng-if="dbpResults[$index+0]"></md-thumb-img>
 					</div>
-					<div class="col-md-6" ng-show="dbpResults[$index+1]">
-						<md-thumb-img mdthumbobj="dbpResults[$index+1]"></md-thumb-img>
+					<div class="col-md-6">
+						<md-thumb-img mdthumbobj="dbpResults[$index+1]" ng-if="dbpResults[$index+1]"></md-thumb-img>
 					</div>
 				</div>
 			</span>
