Begin to add d3.js functionality

--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -38,5 +38,20 @@
 	</div>
 </section>
 
+<section id="timeline">
+	<div class="row">
+		<div class="col-md-12">
+			<h4>timeline</h4>
+			<md-d3-timeline></md-d3-timeline>
+		</div>
+	</div>
+</section>
 
-
+<section id="relationships">
+	<div class="row">
+		<div class="col-md-12">
+			<h4>relationships</h4>
+			<md-d3-force-graph></md-d3-force-graph>
+		</div>
+	</div>
+</section>
