--- a/css/app_d3.css
+++ b/css/app_d3.css
@@ -17,16 +17,22 @@
 
 
 /* force graph */
+text {
+	pointer-events: none;
+	font: 10px sans-serif;
+	text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+}
+
 .node {
-  stroke: #fff;
-  stroke-width: 1.5px;
+	stroke: #fff;
+	stroke-width: 1.5px;
 }
 
 .node.fixed {
-  fill: #f00;
+	fill: #f00;
 }
 
 .link {
-  stroke: #999;
-  stroke-opacity: .6;
+	stroke: #999;
+	stroke-opacity: .6;
 }
