Add stable mdD3ForceGraph code
No longer reading from JSON file but rather array.  Also, using node id values for edges vs node indices.

--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -38,7 +38,7 @@
 	</div>
 </section>
 
-<section id="timeline">
+<section id="timeline" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
 			<h4>timeline</h4>
@@ -47,11 +47,11 @@
 	</div>
 </section>
 
-<section id="relationships">
+<section id="relationships" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
 			<h4>relationships</h4>
-			<md-d3-force-graph></md-d3-force-graph>
+			<md-d3-force-graph mdassocobj="dbpResultsAssociates"></md-d3-force-graph>
 		</div>
 	</div>
 </section>
