--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -51,7 +51,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h4>relationships</h4>
-			<md-d3-force-graph mdassocobj="dbpResultsAssociates"></md-d3-force-graph>
+			<md-d3-force-graph mdassocobj="dbpResultsAssociatesInclFeatured"></md-d3-force-graph>
 		</div>
 	</div>
 </section>
