Refine d3 extended associations force graph and related

--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -50,7 +50,7 @@
 <section id="relationships" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
-			<h4>relationships</h4>
+			<h2>extended associations</h2>
 			<md-d3-force-graph mdassocobj="dbpResultsAssociatesInclFeatured"></md-d3-force-graph>
 		</div>
 	</div>
