--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -38,16 +38,7 @@
 	</div>
 </section>
 
-<section id="timeline" ng-if="dbpResultsAssociates.length > 0">
-	<div class="row">
-		<div class="col-md-12">
-			<h4>timeline</h4>
-			<md-d3-timeline></md-d3-timeline>
-		</div>
-	</div>
-</section>
-
-<section id="relationships" ng-if="dbpResultsAssociates.length > 0">
+<section id="musician-extended-associates" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
 			<h2>extended associations</h2>
