--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -46,3 +46,26 @@
 		</div>
 	</div>
 </section>
+
+<section id="musician-youtube" ng-if="youTubeVideos.length > 0">
+	<div class="row">
+		<div class="col-md-12">
+			<h2>listen</h2>
+			<div ng-repeat="video in youTubeVideos">
+				<span ng-switch on="$index % 2">
+					<span ng-switch-when="0">
+						<div class="row">
+							<div class="col-md-6">
+								<md-you-tube-img mdyoutubeobj="youTubeVideos[$index+0]" ng-if="youTubeVideos[$index+0]"></md-you-tube-img>
+							</div>
+							<div class="col-md-6">
+								<md-you-tube-img mdyoutubeobj="youTubeVideos[$index+1]" ng-if="youTubeVideos[$index+1]"></md-you-tube-img>
+							</div>
+						</div>
+					</span>
+				</span>
+			</div>
+		</div>
+	</div>
+</section>
+
