--- a/css/app.css
+++ b/css/app.css
@@ -44,6 +44,13 @@ a.button span {
 	padding-left: 0px;
 }
 
+a.button.youtube-btn {
+	background: inherit;
+	filter: inherit;
+	border: none;
+	font-size: x-small;
+}
+
 ul li {
   list-style: none;
   padding-left: 0px;
@@ -93,6 +100,13 @@ footer a:active {
 	padding: 10px 10px 10px 10px;
 	text-align: center;
 	border-radius: 4px;
+}
+
+.button.youtube-btn {
+	width: 293px;
+	margin-bottom: 14px;
+	padding: 0px 0px 5px 0px;
+	text-align: center;
 }
 
 .btn.btn-default.button.search {
@@ -145,6 +159,19 @@ footer a:active {
 	background-color: black;
 	font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
 	font-size: 24px;
+	font-weight: normal;
+	text-align: center;
+	color: white;
+}
+
+.youtube-img {
+/*	height: 170px;*/
+	width: 293px;
+	border: 5px ridge #9a9a9a;
+	padding: 10px 10px 10px 10px;
+	background-color: black;
+	font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
+	font-size: 14px;
 	font-weight: normal;
 	text-align: center;
 	color: white;
@@ -248,8 +275,6 @@ footer a:active {
 	margin-bottom: 4px;
 }
 
-/* css for youtube elements
-================================================== */
 
 
 /* css for d3 force graph elements
@@ -304,11 +329,15 @@ text {
 		padding-bottom: 1px;
 	}
 
+	a.button.thumb-btn {
+		margin-right: 0px;
+	}
+
 	a.button.featured-btn {
 		margin-right: 0px;
 	}
 
-	a.button.thumb-btn {
+	a.button.youtube-btn {
 		margin-right: 0px;
 	}
 
