Auto adjust height of mdD3ForceGraph based on number of nodes vs static

--- a/css/app.css
+++ b/css/app.css
@@ -232,6 +232,12 @@ footer a:active {
 	background-color: inherit;
 }
 
+
+
+.fa-youtube-square:before {
+	vertical-align: middle;
+}
+
 /* To work around side effect of clicking quickly
    on carousel causes it to look "selected";
    could use this elsewhere if needed */
