Add twitter section/button to musician page

--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -69,3 +69,17 @@
 	</div>
 </section>
 
+<section id="musician-twitter">
+	<div class="row">
+		<div class="col-md-12">
+			<h2>chatter</h2>
+			<div class="text-center">
+				<a target="twitter_window" href="https://twitter.com/search?q=={{ dbpResultsMusician[0].resource_label.value }}" data-toggle="tooltip" data-placement="bottom" title="Show me the latest twitter activity for {{ dbpResultsMusician[0].resource_label.value }}" md-tooltip>
+					<span>
+						<i class="fa fa-twitter-square fa-5x"></i>
+					</span>
+				</a>
+			</div>
+		</div>
+	</div>
+</section>
