--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -3,9 +3,9 @@
 <md-results-placeholder mdresplaceholder="dbpResultsMusician"></md-results-placeholder>
 
 <nav role="navigation">
-	<ul class="{{ dbpResultsAssociates.length > 0 ? 'nav' : 'nav nav-sm' }}">
-		<li><a class="button nav-btn" ng-click="scrollTo('#musician-associates')" ng-if="dbpResultsAssociates.length > 0">associated musicians</a></li>
-		<li><a class="button nav-btn" ng-click="scrollTo('#musician-extended-associates')" ng-if="dbpResultsAssociates.length > 0">extended associations</a></li>
+	<ul class="{{ dbpResultsAssociates.length > 0 && youTubeVideos.length > 0  ? 'nav' : (youTubeVideos.length > 0 ? 'nav nav-sm' : 'nav nav-hide') }}">
+		<li><a class="button nav-btn" ng-click="scrollTo('#musician-associates')" ng-if="dbpResultsAssociates.length > 0">direct associates</a></li>
+		<li><a class="button nav-btn" ng-click="scrollTo('#musician-extended-associates')" ng-if="dbpResultsAssociates.length > 0">extended network</a></li>
 		<li><a class="button nav-btn" ng-click="scrollTo('#musician-youtube')" ng-if="youTubeVideos.length > 0">listen</a></li>
 		<li><a class="button nav-btn" ng-click="scrollTo('#musician-twitter')">chatter</a></li>
 	</ul>
@@ -36,7 +36,7 @@
 <section class="no-select" id="musician-associates" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
-			<h2>associated musicians</h2>
+			<h2>direct associates</h2>
 			<carousel>
 				<slide ng-repeat="associate in dbpResultsAssociates" active="dbpResultsAssociates[$index].active">
 					<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+0]"></md-thumb-img>
@@ -50,7 +50,7 @@
 <section id="musician-extended-associates" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
-			<h2>extended associations</h2>
+			<h2>extended network</h2>
 			<md-d3-force-graph mdassocobj="dbpResultsAssociatesInclFeatured"></md-d3-force-graph>
 		</div>
 	</div>
