Mod link to twitter to include &src=sprv to avoid twitter altering search term to what it thinks you want

--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -83,7 +83,7 @@
 		<div class="col-md-12">
 			<h2>chatter</h2>
 			<div>
-				<a class="button twitter-btn" target="twitter_window" href="https://twitter.com/search?q={{ dbpResultsMusician[0].resource_label.value }}" data-toggle="tooltip" data-placement="right" title="Show me the latest twitter activity for {{ dbpResultsMusician[0].resource_label.value }}" md-tooltip>
+				<a class="button twitter-btn" target="twitter_window" href="https://twitter.com/search?q={{ dbpResultsMusician[0].resource_label.value }}&amp;src=sprv" data-toggle="tooltip" data-placement="right" title="Show me the latest twitter activity for {{ dbpResultsMusician[0].resource_label.value }}" md-tooltip>
 					<span>
 						<i class="fa fa-twitter-square fa-5x"></i>
 					</span>
