--- a/css/app.css
+++ b/css/app.css
@@ -396,6 +396,16 @@ text {
 
 /* #Media Queries
 ================================================== */
+/* Hide right nav for IE */
+_:-ms-lang(x), .ie10up { 
+.nav.nav-hide {
+	margin: -22px -5000px 0px 0px;
+} 
+}
+_:-ms-fullscreen, :root .ie11up { 
+.nav.nav-hide {
+	margin: -22px -5000px 0px 0px;
+}
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
