Test fix for IE right nav bar display issue

--- a/css/app.css
+++ b/css/app.css
@@ -397,12 +397,19 @@ text {
 /* #Media Queries
 ================================================== */
 /* Hide right nav for IE */
-_:-ms-lang(x), .ie10up { 
+/*_:-ms-lang(x), .ie10up { 
 	.nav.nav-hide {
 		margin: -22px -5000px 0px 0px;
 	} 
 }
 _:-ms-fullscreen, :root .ie11up { 
+	.nav.nav-hide {
+		margin: -22px -5000px 0px 0px;
+	}
+}*/
+
+/* Hide right nav for IE (10+) */
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 	.nav.nav-hide {
 		margin: -22px -5000px 0px 0px;
 	}
